--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ p {
     color: white;
     display: inline-block;
     letter-spacing: .1rem;
-    padding: 1rem 2rem;
+    padding: 1rem;
     margin-top: 2rem;
     text-decoration: none;
     text-transform: uppercase;
